2011-06-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php: Some modifications in update tag function.

2011-06-03 Javier Lanz <javier.lanz@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: Edited to get
	"custom_integer_2" parameter & Added period combo 
	* godmode/agentes/module_manager_editor.php: Edited to get
	"custom_integer_2" parameter

2011-06-01  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php: Do not allow empty passwords when
	  authenticating against an LDAP server.

2011-06-01 Javier Lanz <javier.lanz@artica.es>

	* include/functions_graph.php: Fixed a deprecated function call
	* include/functions_reporting.php: Fixed a deprecated function call and
	removed some connection error messages
	* include/functions.php: Disabled agents/modules report type when
	metaconsole is active
	* operation/agentes/ver_agente.php: Removed some connection error messages
	* godmode/reporting/reporting_builder.list_items.php: Removed some
	connection error messages
	* godmode/reporting/reporting_builder.php: Added getting server name for
	sql reports & custom graph in metaconsole
	* godmode/reporting/reporting_builder.item_editor.php: Added Server
	combo box, custom graph for metaconsole & removed some connection error
	messages

2011-05-30 Javier Lanz <javier.lanz@artica.es>
	* include/functions_reporting.php: Edited "render_report_html" function
	to work with metaconsole printing metaconsole elements
	* include/javascript/pandora.js: Modified autocomplete javascript to use
	with metaconsole
	* include/ajax/reporting.ajax.php: Edited to work with metaconsole
	* include/ajax/agent.php: Edited autocomplete to work with metaconsole
	* operation/agentes/ver_agente.php: Modified to get the agent's modules
	using metacofacensole
	* godmode/reporting/reporting_builder.list_items.php: Edited to display
	agents & modules in metaconsole. Edited top filters to work with
	metaconsole